--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"dependencies": {
 		"axios": "^0.26.1",
+		"bootstrap-icons": "^1.8.1",
 		"jquery": "^3.6.0",
 		"lit": "^2.2.0",
 		"page": "^1.11.6",
