--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.2.6"
+		"mongoose": "^6.2.6",
+		"node-cron": "^3.0.0"
 	}
 }
