--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -16,6 +16,7 @@
 		"express": "^4.17.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.6",
-		"node-cron": "^3.0.0"
+		"node-cron": "^3.0.0",
+		"socket.io": "^4.4.1"
 	}
 }
