--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,6 +7,7 @@
 		"jquery": "^3.6.0",
 		"lit": "^2.2.0",
 		"page": "^1.11.6",
+		"socket.io-client": "^4.4.1",
 		"sortablejs": "^1.14.0"
 	},
 	"scripts": {
