--- a/nodejs/.env
+++ b/nodejs/.env
@@ -4,3 +4,4 @@ MONGO_URI="mongodb://127.0.0.1:27017/royal"
 MONGO_USER="nodejs"
 MONGO_PASS="fP55naP4iFH6565ShrpyqELGe9MEQGNSnzmiacxG"
 TOKEN_KEY="p@JC@Ambo?&NNyR4Y9tJ9PbmrRHjK7H6EeGM@@5q"
+#TZ = "Etc/Universal"; # Timezone
