added new tables view

--- a/nodejs/.env
+++ b/nodejs/.env
@@ -1,5 +1,6 @@
 # .env file
-PORT="3000"
+HTTP_PORT="3000"
+HTTPS_PORT="3443"
 MONGO_URI="mongodb://127.0.0.1:27017/royal"
 MONGO_USER="nodejs"
 MONGO_PASS="fP55naP4iFH6565ShrpyqELGe9MEQGNSnzmiacxG"
