added searches and other stuff

--- a/things/place this in nodejs folder on server/.env
+++ b/things/place this in nodejs folder on server/.env
@@ -1,8 +1,8 @@
 # .env file
+NODE_ENV="production"
 HTTP_PORT="3000"
 HTTPS_PORT="3443"
 MONGO_URI="mongodb://127.0.0.1:27017/royal"
 MONGO_USER="nodejs"
 MONGO_PASS="fP55naP4iFH6565ShrpyqELGe9MEQGNSnzmiacxG"
 TOKEN_KEY="p@JC@Ambo?&NNyR4Y9tJ9PbmrRHjK7H6EeGM@@5q"
-#TZ = "Etc/Universal"; # Timezone
