--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -25,6 +25,7 @@
 	"devDependencies": {
 		"chai": "^4.3.7",
 		"chai-http": "^4.3.0",
-		"mocha": "^10.2.0"
+		"mocha": "^10.2.0",
+		"nodemon": "^3.0.0"
 	}
 }
